# Cloud-Data-Warehouse-Project

./: CLAUDE.md  create_tables.py  etl.py  pyproject.toml  sql_queries.py
.github/workflows/: ci.yml
tests/: conftest.py  test_create_tables.py  test_etl.py  test_sql_queries.py
