[project]
name = "cloud-data-warehouse"
version = "0.1.0"
description = "AWS Redshift cloud data warehouse for a music streaming app"
requires-python = ">=3.9"
dependencies = [
    "psycopg2-binary>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 120
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
